--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.springframework.samples</groupId>
-  <artifactId>spring-petclinic</artifactId>
+  <groupId>com.everis.bootcamp</groupId>
+  <artifactId>spring-petclinic-everis</artifactId>
   <version>1.4.2</version>
 
   <parent>
@@ -12,7 +12,7 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>1.4.2.RELEASE</version>
   </parent>
-  <name>petclinic</name>
+  <name>petclinic everis</name>
 
   <properties>
 
