--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,7 @@ database=mysql
 spring.datasource.data=classpath*:db/${database}/dataHibernate.sql
 spring.datasource.url=jdbc:mysql://localhost:3306/petclinic?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
-
+spring.datasource.password=
 # Web
 spring.thymeleaf.mode=HTML
 
